--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-select": "^5.7.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
